--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: ShroomyFurretManga
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Hey! I'm a regular old school student that loves Pokemon and doing manga, here I will post my comic strips and other artwork that I wan't to share!
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://s-media-cache-ak0.pinimg.com/236x/61/2e/84/612e84132345ec5bfed2e5bc557f160e.jpg
 
 #
 # Flags below are optional
