--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://s-media-cache-ak0.pinimg.com/236x/61/2e/84/612e84132345ec5bfed2e
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: amal.shakir@btinternet.com
   facebook:
   flickr:
   github: barryclark/jekyll-now
