--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: ShroomyFurretManga
+name: ShroomyFurret!
 
 # Short bio or description (displayed in the header)
-description: Hey! I'm a regular old school student that loves Pokemon and doing manga, here I will post my comic strips and other artwork that I wan't to share!
+description: Hey! I'm really interested in Japanese Folklore, Japanese Food and basically anyting to do with Japan! I'll post anything cool or interesting I learn with at least 1 big article and daily mini facts when I can! I hope you learn something new!!
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://s-media-cache-ak0.pinimg.com/236x/61/2e/84/612e84132345ec5bfed2e5bc557f160e.jpg
